--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <title>Солнечные батареи GreenCorp</title>
   <link rel="stylesheet" href="main.css">
-  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;300;400;500;600;700;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;300;400;500;600;700;800&display=swap"
+    rel="stylesheet">
 </head>
+
 <body>
   <header>
     <img class="header__logo" src='img/logo.svg'>
@@ -25,4 +28,5 @@
     </div>
   </section>
 </body>
+
 </html>
